# mp3ify

./: .gitignore  README.md  mp3ify.py  pyproject.toml  requirements.txt
tests/: __init__.py  conftest.py  test_end_to_end.py  test_mp3ify.py
